# rust-opengl-test

./: Cargo.toml  README.md  imgui.ini
content/: scene.json
content/addons/test/: Program.cs  test.csproj
content/models/: cube.gltf  cube.mtl  monkey.gltf  quad.gltf  sphere.gltf
content/shaders/: gbuffer.glsl  gbuffer_light_debug.glsl  lighting.glsl  standard.glsl  triangle.glsl
src/: camera.rs  color.rs  gfx.rs  input.rs  lerp.rs  main.rs  mesh.rs  model.rs  scene.rs  screen.rs  shader.rs  time.rs
src/gui/: gui_helpers.rs  mod.rs  scene_hierarchy.rs
src/render/: color.rs  gfx.rs  material.rs  mesh.rs  mod.rs  shader.rs  texture.rs  window.rs
src/scene/: camera.rs  light.rs  mod.rs  model.rs  orbitcamera.rs  scene.rs  transform.rs
src/scripting/: mod.rs  script_manager.rs
src/util/: imgui.rs  logger.rs  mod.rs  time.rs
