[package]
name = "rust-opengl-test"
version = "0.1.0"
edition = "2018"

[dependencies]
sdl2 = { version = "0.34.5", features = [ "bundled", "static-link" ] }
wavefront_obj = "10.0.0"
gl = "0.14.0"
glam = { version = "0.17.3", features = [ "serde" ] }
serde_json = "1.0.66"
serde = "1.0.129"
serde_derive = "1.0.129"
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
imgui-sdl2 = "0.14.0"
log = "0.4.14"
rapier3d = "0.11.0"