[package]
name = "winston"
version = "0.1.0"
edition = "2018"

[dependencies]
sdl2 = { version = "0.34.5", features = [ "bundled", "static-link" ] }
gl = "0.14.0"
glam = { version = "0.17.3", features = [ "serde" ] }

gltf = "0.16.0"
image = "0.23.14"

serde_json = "1.0.66"
serde = "1.0.129"
serde_derive = "1.0.129"

imgui = { git = "https://github.com/NoxWings/imgui-rs.git", tag = "1.81dock" }
imgui-opengl-renderer = { git = "https://github.com/NoxWings/rust-imgui-opengl-renderer.git" }
imgui-sdl2 = { git = "https://github.com/NoxWings/rust-imgui-sdl2.git" }

rapier3d = "0.11.0"

chrono = "0.4.19"
rand = "0.8.4"

random_color = "0.5.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"
version_check = "0.9.3"
build_timestamp = "0.1.0"

renderdoc = "0.10.1"
netcorehost = "0.6.4"